java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testTryWrapper2.pass
/*
 * AbstractClass.java
 *
 * Created on March 12, 2005, 7:22 PM
 */

package org.netbeans.test.java.hints;
import java.io.File;
import java.io.FileInputStream;
import java.io.FileNotFoundException;

/**
 *
 * @author lahvac
 */
public abstract class TryWrapper2 {
    
    /** Creates a new instance of AbstractClass */
    public TryWrapper2() {
        FileInputStream fis;
        try {
            fis = new FileInputStream(new File(""));
        } catch (FileNotFoundException ex) {
            ex.printStackTrace();
        }
        
        fis.read();
    }
    
}
